--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "leave_management_system",
   "version": "1.0.0",
   "main": "index.js",
-  "type" :"module",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node app.js",
-    "dev":"node --watch app.js"
-
+    "start": "node app.js",
+    "dev": "node --watch app.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +15,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "joi": "^18.0.1",
     "mongoose": "^8.19.1"
   }
 }
