--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "leave_management_system",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
